arcadia-api/fastapi-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: arcadia-fastapi
  labels:
    app: arcadia-api
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: arcadia-api
  template:
    metadata:
      labels:
        app: arcadia-api
    spec:
      containers:
        - image: gcu-profit-dev.kr-central-2.kcr.dev/arcadia-nextjs/fastapi:50
          name: fastapi
          ports:
            - containerPort: 8000
              name: http
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: kic-registry
  strategy:
    blueGreen:
      activeService: arcadia-fastapi-active
      previewService: arcadia-fastapi-preview
      autoPromotionEnabled: true
