arcadia-api/springBoard-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: arcadia-springboot-board
  labels:
    app: arcadia-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: arcadia-api
  template:
    metadata:
      labels:
        app: arcadia-api
    spec:
      containers:
        - image: gcu-profit-dev.kr-central-2.kcr.dev/arcadia-nextjs/springboot-board
          tag: latest
          name: springboot-board
          ports:
            - containerPort: 8081
              name: http
      imagePullSecrets:
        - name: kic-registry
  strategy:
    blueGreen:
      activeService: arcadia-springboot-board-active
      previewService: arcadia-springboot-board-preview
      autoPromotionEnabled: true
