arcadia-api/springLogin-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: arcadia-springboot-login
  labels:
    app: arcadia-api
spec:
  replicas: 3
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: arcadia-api
  template:
    metadata:
      labels:
        app: arcadia-api
    spec:
      containers:
        - image: gcu-profit-dev.kr-central-2.kcr.dev/arcadia-nextjs/springboot-login:197
          name: springboot-login
          ports:
            - containerPort: 8080
              name: http
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "1024Mi"
              cpu: "1000m"
      imagePullSecrets:
        - name: kic-registry
  strategy:
    blueGreen:
      activeService: arcadia-springboot-login-active
      previewService: arcadia-springboot-login-preview
      autoPromotionEnabled: true
