arcadia-api/sunoapi-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: sunoapi
  labels:
    app: arcadia-api
spec:
  replicas: 3
  revisionHistoryLimit: 5
  selector:
    matchLabels:
      app: arcadia-api
  template:
    metadata:
      labels:
        app: arcadia-api
    spec:
      containers:
        - image: gcu-profit-dev.kr-central-2.kcr.dev/arcadia-nextjs/sunoapi:latest
          name: sunoapi
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"
            limits:
              memory: "512Mi"
              cpu: "500m"
      imagePullSecrets:
        - name: kic-registry
  strategy:
    blueGreen:
      activeService: sunoapi-service-active
      previewService: sunoapi-service-preview
      autoPromotionEnabled: true
