arcadia-api/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: arcadia-fastapi-service
  labels:
    app: arcadia-api
spec:
  selector:
    app: arcadia-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: arcadia-springboot-login-service
  labels:
    app: arcadia-api
spec:
  selector:
    app: arcadia-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: arcadia-springboot-board-service
  labels:
    app: arcadia-api
spec:
  selector:
    app: arcadia-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8081
---
