arcadia-api/sunoapi-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sunoapi-service
  labels:
    app: arcadia-api
spec:
  selector:
    app: sunoapi
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
