arcadia-api/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: arcadia-api-gateway
  labels:
    app: arcadai-api
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "arcadia-api.p-e.kr"
  - port:
      number: 443
      name: https
      protocol: HTTPS
    tls:
      mode: SIMPLE
      credentialName: arcadia-api-pe-kr-credential
    hosts:
    - "arcadia-api.p-e.kr"
