arcadia-api/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arcadia-ingress
  labels:
    app: arcadia-api
  annotations:
    # nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: "letsencrypt-staging"
spec:
  rules:
  - host: arcadia-api.p-e.kr
    http:
      paths:
      - path: /fastapi
        pathType: Prefix
        backend:
          service:
            name: arcadia-fastapi-service
            port:
              number: 80
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: arcadia-springboot-login-service
            port:
              number: 80
      - path: /board
        pathType: Prefix
        backend:
          service:
            name: arcadia-springboot-board-service
            port:
              number: 80
  tls:
    - hosts:
      - arcadia-api.p-e.kr
      secretName: arcadia-api-tls
status:
  loadBalancer:
    ingress:
      - hostname: >-
          k8s-ingress-ingress-2b8e92a4cf-4d2a3b04886140f1b961a25856211401.ke.kr-central-2.kakaocloud.com
